--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "css-loader": "^0.28.1",
-    "ts-loader": "^2.0.3",
+    "css-loader": "^0.28.11",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "ts-loader": "^4.3.0",
     "typescript": "^2.7.2",
-    "vue-loader": "^12.0.3",
+    "vue-loader": "^15.0.10",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^2.5.0"
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3"
   }
 }
