--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "webpack",
     "serve": "http-server ./",
+    "build-and-serve": "npm run build & npm run serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
