--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   },
   "homepage": "https://github.com/noisy-witness/steem-smartvotes-voter-page#readme",
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/vue-fontawesome": "0.0.22",
     "bootstrap-vue": "^2.0.0-rc.9",
     "vue": "^2.5.2",
     "vue-class-component": "^6.0.0",
@@ -41,6 +45,7 @@
     "vue-loader": "^15.0.10",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3"
+    "webpack-cli": "^2.1.3",
+    "webpack-visualizer-plugin": "^0.1.11"
   }
 }
