--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "moduleResolution": "node",
         "target": "es5",
         "experimentalDecorators": true,
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "allowJs": true
     },
     "include": [
         "./src/**/*"
