--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/vue-fontawesome": "0.0.22",
+    "bluebird": "^3.5.1",
     "bootstrap-vue": "^2.0.0-rc.9",
     "steem": "^0.7.1",
     "steem-wise-core": "^0.17.2",
@@ -39,6 +40,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.20",
     "css-loader": "^0.28.11",
     "http-server": "^0.11.1",
     "node-sass": "^4.9.0",
