--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/vue-fontawesome": "0.0.22",
     "bluebird": "^3.5.1",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "sc2-sdk": "^1.0.2",
     "steem": "^0.7.1",
     "steem-wise-core": "^0.17.13",
     "vue": "^2.5.2",
