--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.1.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.20",
