Install lodash & update node-sass (security)

--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/vue-fontawesome": "0.0.22",
+    "@types/lodash": "^4.14.111",
     "bluebird": "^3.5.1",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "lodash": "^4.17.10",
     "sc2-sdk": "^1.0.2",
     "steem": "^0.7.1",
     "steem-wise-core": "^0.18.0",
@@ -45,7 +47,7 @@
     "@types/bluebird": "^3.5.20",
     "css-loader": "^0.28.11",
     "http-server": "^0.11.1",
-    "node-sass": "^4.9.1",
+    "node-sass": "^4.9.2",
     "sass-loader": "^7.0.2",
     "ts-loader": "^4.3.1",
     "typescript": "^2.9.1",
