--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.20",
     "css-loader": "^0.28.11",
+    "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.2",
