--- a/production.yml
+++ b/production.yml
@@ -1,6 +1,18 @@
 version: "3"
+
+networks:
+  proxy-tier:
+    external:
+      name: caddy-proxy
+
 services:
   site:
     build: .
-    ports:
-      - 8080
+    networks:
+      - proxy-tier
+    environment:
+      NODE_ENV: production
+      VIRTUAL_HOST: "testing.wise.vote/voting-page"
+      VIRTUAL_NETWORK: "caddy-proxy"
+      VIRTUAL_PORT: 8080
+      CADDY_TIMEOUTS: "read 5m, write 2m"
