Update voter page for the new version of the library

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vote delegation system for STEEM blockchain: a voting page",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "rm -rf dist && webpack",
     "serve": "http-server ./",
     "build-and-serve": "npm run build & npm run serve",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -29,14 +29,14 @@
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/vue-fontawesome": "0.0.22",
-    "@types/lodash": "^4.14.111",
-    "bluebird": "^3.5.1",
+    "@types/lodash": "^4.14.116",
+    "bluebird": "^3.5.2",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "sc2-sdk": "^1.0.2",
     "steem": "^0.7.1",
     "steem-wise-core": "^1.0.0",
-    "vue": "^2.5.2",
+    "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.1.0",
     "vue-router": "^3.0.1",
@@ -44,17 +44,17 @@
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.20",
+    "@types/bluebird": "^3.5.24",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
-    "node-sass": "^4.9.2",
-    "sass-loader": "^7.0.2",
-    "ts-loader": "^4.3.1",
-    "typescript": "^2.9.1",
-    "vue-loader": "^15.2.4",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^4.10.2",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "ts-loader": "^4.5.0",
+    "typescript": "^2.9.2",
+    "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.19.0",
     "webpack-cli": "^2.1.5",
     "webpack-visualizer-plugin": "^0.1.11"
   }
