--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "bootstrap": "^4.1.2",
     "bootstrap-vue": "^2.0.0-rc.11",
     "lodash": "^4.17.11",
-    "sc2-sdk": "^1.0.2",
     "steem": "^0.7.1",
     "steem-wise-core": "^1.2.1",
+    "steemconnect": "^2.0.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.1.0",
