--- a/package.json
+++ b/package.json
@@ -9,21 +9,6 @@
     "build-and-serve": "npm run build & npm run serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wise-team/steem-wise-voter-page.git"
-  },
-  "keywords": [
-    "steem",
-    "blockchain",
-    "wise"
-  ],
-  "author": "Jędrzej Lewandowski <jedrzejblew@gmail.com> (https://jedrzej.lewandowski.doctor/)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/wise-team/steem-wise-voter-page/issues"
-  },
-  "homepage": "https://github.com/wise-team/steem-wise-voter-page#readme",
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
@@ -58,5 +43,21 @@
     "webpack": "^4.19.0",
     "webpack-cli": "^2.1.5",
     "webpack-visualizer-plugin": "^0.1.11"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wise-team/steem-wise-voter-page.git"
+  },
+  "keywords": [
+    "steem", "blockchain", "wise"
+  ],
+  "author": "The Wise Team (https://wise-team.io/)",
+  "contributors": [
+    "Jędrzej Lewandowski <jedrzejblew@gmail.com> (https://jedrzej.lewandowski.doctor/)"
+  ],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/wise-team/steem-wise-voter-page/issues"
+  },
+  "homepage": "https://wise.vote/"
 }
