--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,4 @@ services:
     image: wise/voting-page
     #§ 'container_name: ' + d(data.config.votingPage.docker.services.frontend.container)
     container_name: voting-page
+    restart: always
