--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/vue-fontawesome": "0.0.22",
     "@types/lodash": "^4.14.116",
+    "@types/steem-js-alpha": "https://github.com/wise-team/types-for-steem-js/raw/master/bin/types-steem-js-alpha-latest.tgz",
     "bluebird": "^3.5.2",
     "bootstrap": "^4.1.2",
     "bootstrap-vue": "^2.0.0-rc.11",
@@ -27,8 +28,7 @@
     "vue-property-decorator": "^6.1.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.5.4",
-    "@types/steem-js-alpha": "https://github.com/wise-team/types-for-steem-js/raw/master/bin/types-steem-js-alpha-latest.tgz"
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.24",
