--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steem-wise-voter-page",
-  "version": "3.0.3",
+  "version": "3.1.0-rc.1",
   "description": "Vote delegation system for STEEM blockchain: a voting page",
   "main": "index.js",
   "scripts": {
@@ -21,7 +21,7 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "lodash": "^4.17.11",
     "steem": "^0.7.1",
-    "steem-wise-core": "^3.0.3",
+    "steem-wise-core": "^3.1.0-rc.1",
     "steemconnect": "^2.0.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
