feat: update dependencies

--- a/package.json
+++ b/package.json
@@ -13,36 +13,37 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@fortawesome/vue-fontawesome": "0.0.22",
-    "@types/lodash": "^4.14.116",
-    "@types/steem-js-alpha": "https://github.com/wise-team/types-for-steem-js/raw/master/bin/types-steem-js-alpha-3.1.2.tgz",
-    "bluebird": "^3.5.2",
-    "bootstrap": "^4.1.2",
-    "bootstrap-vue": "^2.0.0-rc.11",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
+    "@types/lodash": "^4.14.123",
+    "bluebird": "^3.5.4",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.18",
     "lodash": "^4.17.11",
-    "steem": "^0.7.1",
-    "steem-wise-core": "^3.1.1",
-    "steemconnect": "^2.0.0",
-    "vue": "^2.5.17",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^6.1.0",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
+    "steem": "^0.7.4",
+    "steem-wise-core": "^4.2.0",
+    "steemconnect": "^2.0.1",
+    "vue": "^2.6.10",
+    "vue-class-component": "^7.0.2",
+    "vue-property-decorator": "^8.1.0",
+    "vue-router": "^3.0.3",
+    "vuex": "^3.1.0",
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.24",
-    "css-loader": "^0.28.11",
+    "@types/bluebird": "^3.5.26",
+    "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
-    "ts-loader": "^4.5.0",
-    "typescript": "^2.9.2",
-    "vue-loader": "^15.4.2",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.19.0",
-    "webpack-cli": "^2.1.5",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.4.3",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "repository": {
